Calculate overflow correctly for ellipses in presence of relative elements

If overflow is present we use it to decide if a linebox needs ellipsis - so
when adding overflow ensure we unite it with the root linebox rect, any
relative offset will then get applied ensuring that the overflow rect
represents the extent of the linebox plus overflow.

Bug: 762978
Change-Id: I44df439cdf0f190d08d5fad587571f7298843328
Reviewed-on: https://chromium-review.googlesource.com/659077
Reviewed-by: Emil A Eklund <eae@chromium.org>
Commit-Queue: Robert Hogan <robhogan@gmail.com>
Cr-Commit-Position: refs/heads/master@{#500988}
Former-commit-id: 04dcd8d58c19de98e9404f30d8106143484af9ed